// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> snapshot - default props 1`] = `
<div
  className="container"
  onClick={[Function]}
>
  ...
</div>
`;

exports[`<Button/> snapshot - with TEXT 1`] = `
<div
  className="container"
  onClick={[Function]}
>
  TEXT
</div>
`;
